fixed Travis auto deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 - git submodule init
 - git submodule update
 script:
-- make test
+- make web
 after_success:
 - git config --global user.email "travis@travis-ci.org"
 - git config --global user.name "Travis CI"
